--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,12 +3,12 @@
 @import "tailwindcss/utilities.css";
 
 :root {
-  --ARMS---black: #201F1F;
-  --ARMS---white: #FFFFFF;
-  --ARMS---gray: #E0E0E0;
-  --ARMS---yellow: #F9C406;
-  --ARMS---blue: #6506F9;
-  --ARMS---blue-dark: #4604AE;
+  --ARMS---black: #201f1f;
+  --ARMS---white: #ffffff;
+  --ARMS---gray: #e0e0e0;
+  --ARMS---yellow: #f9c406;
+  --ARMS---blue: #6506f9;
+  --ARMS---blue-dark: #4604ae;
   --swiper-pagination-bullet-height: 4px;
   --swiper-pagination-bullet-horizontal-gap: 0px;
   --swiper-pagination-bullet-vertical-gap: 0px;
@@ -26,10 +26,10 @@ html,
 body {
   position: relative;
   height: 100%;
-  background: #201F1F;
+  background: #201f1f;
   filter: brightness(0);
   animation: fadeIn 1s ease-in-out forwards;
-  font-family: 'Gilroy', sans-serif;
+  font-family: "Gilroy", sans-serif;
 }
 
 * {
@@ -66,7 +66,8 @@ body {
 }
 
 .swiper-pagination-vertical.swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
-.swiper-vertical>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+.swiper-vertical
+  > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   width: 96px;
   top: var(--swiper-pagination-top);
 }
@@ -77,12 +78,12 @@ body {
 }
 
 .swiper-slide:nth-of-type(2) {
-  background: var(--ARMS---white, #FFF);
+  background: var(--ARMS---white, #fff);
   color: var(--ARMS---black);
 }
 
 .swiper-slide:nth-of-type(3) {
-  background: var(--ARMS---yellow, #F9C406);
+  background: var(--ARMS---yellow, #f9c406);
   color: var(--ARMS---black);
 }
 
@@ -101,7 +102,6 @@ body {
   }
 
   &.light {
-
     h5,
     p {
       @extend .text-arms-white;
@@ -113,8 +113,7 @@ body {
   $_bottom-left: 0% 100%;
   $_bottom-right: 100% 100%;
 
-  .anim-slide {
-
+  :not(img).anim-slide {
     transition: clip-path 400ms ease-in-out;
     transition-delay: 1s;
     clip-path: polygon($_top-left, $_bottom-left, $_bottom-left, $_top-left);
@@ -133,8 +132,13 @@ body {
   }
 
   &.swiper-slide-active {
-    .anim-slide {
-      clip-path: polygon($_top-left, $_bottom-left, $_bottom-right, $_top-right);
+    :not(img).anim-slide {
+      clip-path: polygon(
+        $_top-left,
+        $_bottom-left,
+        $_bottom-right,
+        $_top-right
+      );
       transition-delay: 0s;
 
       &.anim-slide-left {
@@ -164,24 +168,6 @@ body {
   }
 }
 
-.swiper-slide img.anim-slide.anim-slide-left {
-  left: -100%;
-  transition: all 400ms;
-}
-
-.swiper-slide.swiper-slide-active img.anim-slide.anim-slide-left {
-  left: 0px;
-}
-
-.swiper-slide img.anim-slide.anim-slide-right {
-  right: -100%;
-  transition: all 400ms;
-}
-
-.swiper-slide.swiper-slide-active img.anim-slide.anim-slide-right {
-  right: 0px;
-}
-
 header {
   svg {
     color: var(--ARMS---white);
@@ -197,12 +183,6 @@ header {
   }
 }
 
-.anim-slide {
-  &.transition-all {
-    transition-property: all;
-  }
-}
-
 .left-4pc {
-    left: 4%;
+  left: 4%;
 }
