--- a/css/styles.css
+++ b/css/styles.css
@@ -711,6 +711,14 @@ video {
       --tw-bg-opacity: 1;
       background-color: rgb(32 31 31 / var(--tw-bg-opacity));
 }
+.bg-arms-black-400{
+      --tw-bg-opacity: 1;
+      background-color: rgb(115 111 111 / var(--tw-bg-opacity));
+}
+.bg-arms-black-500{
+      --tw-bg-opacity: 1;
+      background-color: rgb(94 91 91 / var(--tw-bg-opacity));
+}
 .bg-arms-black-600{
       --tw-bg-opacity: 1;
       background-color: rgb(73 71 71 / var(--tw-bg-opacity));
@@ -1054,10 +1062,6 @@ header.light {
 }
 .hover\:opacity-75:hover{
       opacity: 0.75;
-}
-.hover\:brightness-105:hover{
-      --tw-brightness: brightness(1.05);
-      filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .hover\:saturate-100:hover{
       --tw-saturate: saturate(1);
