--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -67,13 +67,18 @@ header {
 
   
 .button {
+  @apply transition-all;
   div {
-    @apply px-12 py-11 flex flex-row items-center gap-6 text-xl cursor-pointer transition-all;
+    @apply px-12 py-11 flex flex-row items-center gap-6 text-xl cursor-pointer;
+    @apply transition-all;
   }
   &:hover {
     div {
       @apply gap-24;
     }
+  }
+  &:active {
+    @apply brightness-75;
   }
 }
 
