--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -590,6 +590,9 @@ video {
 .ml-11{
       margin-left: 2.75rem;
 }
+.mr-16{
+      margin-right: 4rem;
+}
 .block{
       display: block;
 }
@@ -994,7 +997,7 @@ video {
   --swiper-pagination-bullet-inactive-color: transparent;
   --swiper-pagination-color: transparent;
   --swiper-pagination-text-color: black;
-  --swiper-pagination-right: 198px;
+  --swiper-pagination-right: 304px;
   --swiper-pagination-top: 101.8%;
 
   --breakpoint-sm: 604px;
