--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -972,16 +972,36 @@ video {
       transition: all 150ms ease-in-out;
     }
 .cases .anim-slide {
-      animation: clipPath 300ms ease-in-out forwards;
+      animation: clipPath 250ms ease-in-out forwards;
+    }
+.cases .anim-slide.anim-slide-down {
+        animation: clipPathDown 250ms ease-in-out forwards;
+      }
+.cases .anim-slide.anim-slide-reverse {
+        animation-direction: reverse;
+      }
+@keyframes clipPathDown {
+      0% {
+        -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+                clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+        opacity: 0;
+      }
+      100% {
+        -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+                clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+        opacity: 1;
+      }
     }
 @keyframes clipPath {
       0% {
-        -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 0% 0%);
-                clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 0% 0%);
+        -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+                clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+        opacity: 0;
       }
       100% {
-        -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
-                clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
+        -webkit-clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%);
+                clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%);
+        opacity: 1;
       }
     }
 :root {
