✨ Nova página criamos.html 	- Criação da estrutura geral da págin 	- Remoção seta abaixo da logo 	- Criação animação abas superiores ao clicar 	- Criação lógica de cores de abas 	- Criação lógica de exibição de conteúdo por abas

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @import "tailwindcss/utilities.css";
 @import "./home.scss";
 @import "./cases.scss";
+@import "./criamos.scss";
 
 :root {
   --ARMS---black: #201f1f;
