--- a/assets/sass/cases.scss
+++ b/assets/sass/cases.scss
@@ -12,6 +12,10 @@
       transition: all 150ms ease-in-out;
     }
 
+    .bg-black {
+      background: black;
+    }
+
     .anim-slide {
       animation: clipPath 250ms ease-in-out forwards;
       &.anim-slide-down {
