--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -572,6 +572,48 @@ video {
 .order-1{
       order: 1;
 }
+.col-span-2{
+      grid-column: span 2 / span 2;
+}
+.col-span-3{
+      grid-column: span 3 / span 3;
+}
+.col-span-4{
+      grid-column: span 4 / span 4;
+}
+.col-span-5{
+      grid-column: span 5 / span 5;
+}
+.col-span-6{
+      grid-column: span 6 / span 6;
+}
+.col-span-9{
+      grid-column: span 9 / span 9;
+}
+.col-start-1{
+      grid-column-start: 1;
+}
+.col-start-2{
+      grid-column-start: 2;
+}
+.col-start-4{
+      grid-column-start: 4;
+}
+.row-span-1{
+      grid-row: span 1 / span 1;
+}
+.row-span-2{
+      grid-row: span 2 / span 2;
+}
+.row-span-3{
+      grid-row: span 3 / span 3;
+}
+.row-span-6{
+      grid-row: span 6 / span 6;
+}
+.row-start-2{
+      grid-row-start: 2;
+}
 .-mt-10{
       margin-top: -2.5rem;
 }
@@ -654,6 +696,9 @@ video {
 .w-full{
       width: 100%;
 }
+.w-screen{
+      width: 100vw;
+}
 .flex-grow{
       flex-grow: 1;
 }
@@ -671,11 +716,32 @@ video {
 .cursor-pointer{
       cursor: pointer;
 }
+.grid-cols-2{
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .grid-cols-3{
       grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.grid-cols-4{
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-5{
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-cols-6{
+      grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+.grid-cols-9{
+      grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+.grid-rows-2{
+      grid-template-rows: repeat(2, minmax(0, 1fr));
+}
 .grid-rows-3{
       grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-5{
+      grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 .flex-row{
       flex-direction: row;
@@ -783,6 +849,10 @@ video {
       padding-left: 6rem;
       padding-right: 6rem;
 }
+.px-28{
+      padding-left: 7rem;
+      padding-right: 7rem;
+}
 .px-5{
       padding-left: 1.25rem;
       padding-right: 1.25rem;
@@ -799,8 +869,14 @@ video {
       padding-top: 1.75rem;
       padding-bottom: 1.75rem;
 }
+.pl-28{
+      padding-left: 7rem;
+}
 .pr-12{
       padding-right: 3rem;
+}
+.ps-11{
+      padding-inline-start: 2.75rem;
 }
 .pt-24{
       padding-top: 6rem;
@@ -818,6 +894,9 @@ video {
 .text-base{
       font-size: 1rem;
       line-height: 1.5rem;
+}
+.text-title{
+      font-size: 145px;
 }
 .text-xl{
       font-size: 1.25rem;
