--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -596,8 +596,17 @@ video {
 .col-start-2{
       grid-column-start: 2;
 }
+.col-start-3{
+      grid-column-start: 3;
+}
 .col-start-4{
       grid-column-start: 4;
+}
+.col-start-5{
+      grid-column-start: 5;
+}
+.col-start-6{
+      grid-column-start: 6;
 }
 .row-span-1{
       grid-row: span 1 / span 1;
@@ -607,6 +616,9 @@ video {
 }
 .row-span-3{
       grid-row: span 3 / span 3;
+}
+.row-span-4{
+      grid-row: span 4 / span 4;
 }
 .row-span-6{
       grid-row: span 6 / span 6;
@@ -650,6 +662,9 @@ video {
 .hidden{
       display: none;
 }
+.aspect-square{
+      aspect-ratio: 1 / 1;
+}
 .h-1\/2{
       height: 50%;
 }
@@ -667,6 +682,9 @@ video {
 }
 .h-4\/5{
       height: 80%;
+}
+.h-auto{
+      height: auto;
 }
 .h-full{
       height: 100%;
@@ -731,6 +749,9 @@ video {
 .grid-cols-6{
       grid-template-columns: repeat(6, minmax(0, 1fr));
 }
+.grid-cols-7{
+      grid-template-columns: repeat(7, minmax(0, 1fr));
+}
 .grid-cols-9{
       grid-template-columns: repeat(9, minmax(0, 1fr));
 }
@@ -742,6 +763,9 @@ video {
 }
 .grid-rows-5{
       grid-template-rows: repeat(5, minmax(0, 1fr));
+}
+.grid-rows-6{
+      grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 .flex-row{
       flex-direction: row;
@@ -761,6 +785,9 @@ video {
 .items-center{
       align-items: center;
 }
+.justify-start{
+      justify-content: flex-start;
+}
 .justify-end{
       justify-content: flex-end;
 }
@@ -769,6 +796,9 @@ video {
 }
 .justify-between{
       justify-content: space-between;
+}
+.justify-stretch{
+      justify-content: stretch;
 }
 .gap-3{
       gap: 0.75rem;
@@ -785,8 +815,14 @@ video {
 .overflow-y-hidden{
       overflow-y: hidden;
 }
+.rounded-full{
+      border-radius: 9999px;
+}
 .border-0{
       border-width: 0px;
+}
+.border-4{
+      border-width: 4px;
 }
 .border-b{
       border-bottom-width: 1px;
@@ -794,6 +830,10 @@ video {
 .border-arms-light-gray{
       --tw-border-opacity: 1;
       border-color: rgb(83 83 83 / var(--tw-border-opacity));
+}
+.border-arms-yellow{
+      --tw-border-opacity: 1;
+      border-color: rgb(249 196 6 / var(--tw-border-opacity));
 }
 .bg-arms-black{
       --tw-bg-opacity: 1;
@@ -815,9 +855,17 @@ video {
       --tw-bg-opacity: 1;
       background-color: rgb(101 6 249 / var(--tw-bg-opacity));
 }
+.bg-arms-full-black{
+      --tw-bg-opacity: 1;
+      background-color: rgb(1 1 1 / var(--tw-bg-opacity));
+}
 .bg-arms-gray{
       --tw-bg-opacity: 1;
       background-color: rgb(224 224 224 / var(--tw-bg-opacity));
+}
+.bg-arms-light-gray{
+      --tw-bg-opacity: 1;
+      background-color: rgb(83 83 83 / var(--tw-bg-opacity));
 }
 .bg-arms-purple{
       --tw-bg-opacity: 1;
@@ -838,12 +886,30 @@ video {
       --tw-bg-opacity: 1;
       background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gradient-to-t{
+      background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+.from-arms-full-black{
+      --tw-gradient-from: #010101 var(--tw-gradient-from-position);
+      --tw-gradient-to: rgb(1 1 1 / 0) var(--tw-gradient-to-position);
+      --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.to-transparent{
+      --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+.p-12{
+      padding: 3rem;
+}
 .p-16{
       padding: 4rem;
 }
 .px-12{
       padding-left: 3rem;
       padding-right: 3rem;
+}
+.px-14{
+      padding-left: 3.5rem;
+      padding-right: 3.5rem;
 }
 .px-24{
       padding-left: 6rem;
@@ -865,6 +931,10 @@ video {
       padding-top: 2.5rem;
       padding-bottom: 2.5rem;
 }
+.py-16{
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+}
 .py-7{
       padding-top: 1.75rem;
       padding-bottom: 1.75rem;
@@ -880,6 +950,9 @@ video {
 }
 .pt-24{
       padding-top: 6rem;
+}
+.pt-8{
+      padding-top: 2rem;
 }
 .text-center{
       text-align: center;
@@ -915,6 +988,9 @@ video {
 .font-light{
       font-weight: 300;
 }
+.font-medium{
+      font-weight: 500;
+}
 .leading-3{
       line-height: .75rem;
 }
@@ -928,6 +1004,10 @@ video {
 .text-arms-white{
       --tw-text-opacity: 1;
       color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-black{
+      --tw-text-opacity: 1;
+      color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-white{
       --tw-text-opacity: 1;
@@ -1286,5 +1366,17 @@ header.light {
       .sm\:px-24{
             padding-left: 6rem;
             padding-right: 6rem;
+      }
+}
+@media (min-width: 1280px){
+
+      .xl\:grid-cols-5{
+            grid-template-columns: repeat(5, minmax(0, 1fr));
+      }
+}
+@media (min-width: 1536px){
+
+      .\32xl\:grid-cols-6{
+            grid-template-columns: repeat(6, minmax(0, 1fr));
       }
 }
