✨ Criação e otimizacao: 	- Criação pagina visualizacao detalhada work 	- Adição SVGs setas em home 	- Otimização grid system home para remoção de linhas invisiveis 	- Adição SVGs setas em work.html 	- Adição animação anim-slide em home

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./home.scss";
 @import "./cases.scss";
 @import "./criamos.scss";
+@import "./anim-slide.scss";
 
 :root {
   --ARMS---black: #201f1f;
