--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -60,15 +60,10 @@
         }
       }
   
-      $_top-left: 0% 0%;
-      $_top-right: 100% 0%;
-      $_bottom-left: 0% 100%;
-      $_bottom-right: 100% 100%;
-  
       :not(img).anim-slide {
         transition: clip-path 400ms ease-in-out;
         transition-delay: 1s;
-        clip-path: polygon($_top-left, $_bottom-left, $_bottom-left, $_top-left);
+        clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 0% 0%);
   
         &.anim-slide-left {
           clip-path: polygon(100% 0%, 100% 100%, 100% 100%, 100% 0%);
@@ -86,10 +81,10 @@
       &.swiper-slide-active {
         :not(img).anim-slide {
           clip-path: polygon(
-            $_top-left,
-            $_bottom-left,
-            $_bottom-right,
-            $_top-right
+            0% 0%,
+            0% 100%,
+            100% 100%,
+            100% 0%
           );
           transition-delay: 0s;
   
