--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -620,9 +620,6 @@ video {
 .row-span-4 {
   grid-row: span 4 / span 4;
 }
-.row-span-6 {
-  grid-row: span 6 / span 6;
-}
 .row-start-2 {
   grid-row-start: 2;
 }
@@ -722,6 +719,9 @@ video {
 }
 .w-1\/3 {
   width: 33.333333%;
+}
+.w-1\/4 {
+  width: 25%;
 }
 .w-2\/3 {
   width: 66.666667%;
@@ -1273,6 +1273,30 @@ video {
 .criamos .transition-all {
       transition: all 150ms ease-in-out;
     }
+.criamos [data-tab-toggle] {
+      position: relative;
+    }
+.criamos [data-tab-toggle] span, .criamos [data-tab-toggle] svg {
+        z-index: 2;
+      }
+.criamos [data-tab-toggle].inactive {
+        animation: tabInactive 1s ease-in-out forwards;
+      }
+.criamos .tab-indicator {
+      transition: all 250ms ease-in-out;
+    }
+.criamos .tab-indicator.on-0 {
+        left: 0%;
+      }
+.criamos .tab-indicator.on-1 {
+        left: 25%;
+      }
+.criamos .tab-indicator.on-2 {
+        left: 50%;
+      }
+.criamos .tab-indicator.on-3 {
+        left: 75%;
+      }
 :not(img).anim-slide {
   transition: -webkit-clip-path 400ms ease-in-out;
   transition: clip-path 400ms ease-in-out;
@@ -1404,9 +1428,6 @@ header.light {
 .criamos .button div {
       transition: all 150ms ease-in-out;
     }
-.button:hover div {
-  gap: 6rem;
-}
 .button:active {
   --tw-brightness: brightness(.75);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1422,10 +1443,6 @@ header.light {
 ::-webkit-scrollbar-thumb {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.hover\:bg-arms-black-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(73 71 71 / var(--tw-bg-opacity));
 }
 .hover\:opacity-75:hover {
   opacity: 0.75;
