Atualizacoes gerais - Página "criamos"     - Adicionar "hover" com fundo mais claro     - Adicionar indicador de página     - Interação ao clicar em voltar     - Ajustando largura seção abas     - Ajustando repartição da estrutura para alinhar abas com fundo roxo
    - Adicionando ajuste fino em fundo roxo

- Página "work"
    - Adicionar navegação por setas
    - Acicionar loopback para navegação por setas
    - Ajuste fino em seção superior de quadrado amarelo (linha de divisão aparente)
    - Correção interação ao clicar em voltar (redirecionar para seção correta)

- Página "todos os works"
    - Finalização rodapé
    - Alteração logo ARMS para 🐙ARMS
    [] Adicionar indicador de filtragem
    [] Simular alteração de filtro

- Página "home"
    - Adicionar imagens com aspect-ratio
    - Adicionar regra de escalonamento fixado em imagens
    - Finalizar botão de ação seção "conte"
    - Adicionar formulário em seção "conte"
    - Adicionando integração de scroll com alteração de URL
    - Adicionando tratamento de caracteres especiais em alteração de URL ("método")
    - Otimizando hash navigation

--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -119,4 +119,29 @@
     .left-4pc {
       left: 4%;
     }
+
+    .home-img {
+      @apply absolute;
+      @apply top-0;
+      @apply bottom-0;
+      @apply z-20;
+      @apply pointer-events-none;
+      height: 100%;
+    }
+
+    input, textarea {
+      @apply bg-transparent;
+      @apply border-b-2;
+      @apply border-b-arms-black-600;
+      color: white;
+      &:active, &:focus {
+        border-color: white;
+        color: white;
+        outline: none;
+
+      }
+      &:placeholder-shown {
+        @apply text-arms-black-600;
+      }
+    }
   }
