--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -683,6 +683,9 @@ video {
 .h-3\/4 {
   height: 75%;
 }
+.h-32 {
+  height: 8rem;
+}
 .h-4\/5 {
   height: 80%;
 }
@@ -827,6 +830,9 @@ video {
 .justify-stretch {
   justify-content: stretch;
 }
+.gap-10 {
+  gap: 2.5rem;
+}
 .gap-11 {
   gap: 2.75rem;
 }
@@ -841,6 +847,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-9 {
+  gap: 2.25rem;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -860,6 +869,9 @@ video {
 .border-b {
   border-bottom-width: 1px;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
 .border-r {
   border-right-width: 1px;
 }
@@ -870,6 +882,10 @@ video {
 .border-arms-yellow {
   --tw-border-opacity: 1;
   border-color: rgb(249 196 6 / var(--tw-border-opacity));
+}
+.border-b-arms-black-600 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(73 71 71 / var(--tw-border-opacity));
 }
 .border-r-arms-black {
   --tw-border-opacity: 1;
@@ -949,6 +965,10 @@ video {
 .p-16 {
   padding: 4rem;
 }
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -988,6 +1008,12 @@ video {
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+.pb-11 {
+  padding-bottom: 2.75rem;
+}
+.pl-10 {
+  padding-left: 2.5rem;
 }
 .pl-28 {
   padding-left: 7rem;
@@ -1061,6 +1087,10 @@ video {
 .text-arms-black {
   --tw-text-opacity: 1;
   color: rgb(32 31 31 / var(--tw-text-opacity));
+}
+.text-arms-black-600 {
+  --tw-text-opacity: 1;
+  color: rgb(73 71 71 / var(--tw-text-opacity));
 }
 .text-arms-white {
   --tw-text-opacity: 1;
@@ -1211,6 +1241,35 @@ video {
 .home .left-4pc {
       left: 4%;
     }
+.home .home-img {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  z-index: 20;
+  pointer-events: none;
+      height: 100%;
+}
+.home input, .home textarea {
+  background-color: transparent;
+  border-bottom-width: 2px;
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(73 71 71 / var(--tw-border-opacity));
+      color: white;
+}
+.home input:active, .home input:focus, .home textarea:active, .home textarea:focus {
+        border-color: white;
+        color: white;
+        outline: none;
+
+      }
+.home input:-moz-placeholder-shown, .home textarea:-moz-placeholder-shown {
+  --tw-text-opacity: 1;
+  color: rgb(73 71 71 / var(--tw-text-opacity));
+}
+.home input:placeholder-shown, .home textarea:placeholder-shown {
+  --tw-text-opacity: 1;
+  color: rgb(73 71 71 / var(--tw-text-opacity));
+}
 .cases h5 {
       font-size: 150px;
     }
@@ -1443,6 +1502,10 @@ header.light {
 ::-webkit-scrollbar-thumb {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.hover\:bg-arms-black-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 51 51 / var(--tw-bg-opacity));
 }
 .hover\:opacity-75:hover {
   opacity: 0.75;
