--- a/assets/sass/criamos.scss
+++ b/assets/sass/criamos.scss
@@ -1,9 +1,9 @@
 .criamos {
-    h5 {
-      font-size: 150px;
-    }
     .h-max {
       height: max-content;
+    }
+    h5 {
+      font-size: 150px;
     }
     .saturate-0 {
       filter: saturate(0);
@@ -34,5 +34,26 @@
       &.on-3 {
         left: 75%;
       }
+    }
+    
+    --swiper-pagination-color: var(--ARMS---blue);
+    --swiper-pagination-left: auto;
+    --swiper-pagination-right: 8px;
+    --swiper-pagination-bottom: 8px;
+    --swiper-pagination-top: auto;
+    --swiper-pagination-fraction-color: inherit;
+    --swiper-pagination-progressbar-bg-color: rgba(0, 0, 0, 0.25);
+    --swiper-pagination-progressbar-size: 4px;
+    --swiper-pagination-bullet-size: 16px;
+    --swiper-pagination-bullet-width: 16px;
+    --swiper-pagination-bullet-height: 8px;
+    --swiper-pagination-bullet-inactive-color: #000;
+    --swiper-pagination-bullet-inactive-opacity: 0.5;
+    --swiper-pagination-bullet-opacity: 1;
+    --swiper-pagination-bullet-horizontal-gap: 4px;
+    --swiper-pagination-bullet-vertical-gap: 6px;
+
+    .swiper-pagination-bullet {
+      border-radius: 8px;
     }
 }
