--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,15 +15,21 @@
   --ARMS---blue-dark: #4604ae;
   --swiper-pagination-bullet-height: 4px;
   --swiper-pagination-bullet-horizontal-gap: 0px;
-  --swiper-pagination-bullet-vertical-gap: 0px;
+  --swiper-pagination-bullet-vertical-gap: -4px;
   --swiper-pagination-bullet-inactive-color: transparent;
   --swiper-pagination-color: transparent;
   --swiper-pagination-text-color: black;
-  --swiper-pagination-right: 304px;
-  --swiper-pagination-top: 101.8%;
+  --swiper-pagination-right: 310px;
+  --swiper-pagination-top: 83.8%;
 
   --breakpoint-sm: 604px;
   --breakpoint-lg: 1404px;
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    --swiper-pagination-right: 0px;
+  }
 }
 
 html,
