🩹 Finalizando estrutura mobile

--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -1,4 +1,7 @@
 .home {
+    input, textarea {
+      text-transform: uppercase;
+    }
     .swiper-pagination-bullet {
       border-radius: 0;
       width: 96px;
