--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./cases.scss";
 @import "./criamos.scss";
 @import "./anim-slide.scss";
+@import "./work.scss";
 
 :root {
   --ARMS---black: #201f1f;
