--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -578,6 +578,12 @@ video {
 .order-1{
       order: 1;
 }
+.order-2{
+      order: 2;
+}
+.order-3{
+      order: 3;
+}
 .col-span-2{
       grid-column: span 2 / span 2;
 }
@@ -659,11 +665,11 @@ video {
 .mr-16{
       margin-right: 4rem;
 }
+.mt-40{
+      margin-top: 10rem;
+}
 .mt-5{
       margin-top: 1.25rem;
-}
-.mt-80{
-      margin-top: 20rem;
 }
 .block{
       display: block;
@@ -701,8 +707,11 @@ video {
 .h-4\/5{
       height: 80%;
 }
-.h-80{
-      height: 20rem;
+.h-48{
+      height: 12rem;
+}
+.h-64{
+      height: 16rem;
 }
 .h-96{
       height: 24rem;
@@ -729,6 +738,9 @@ video {
 .min-h-\[14rem\]{
       min-height: 14rem;
 }
+.min-h-screen{
+      min-height: 100vh;
+}
 .w-0{
       width: 0px;
 }
@@ -743,9 +755,6 @@ video {
 }
 .w-2\/3{
       width: 66.666667%;
-}
-.w-\[72\%\]{
-      width: 72%;
 }
 .w-auto{
       width: auto;
@@ -824,6 +833,9 @@ video {
 .flex-col{
       flex-direction: column;
 }
+.flex-col-reverse{
+      flex-direction: column-reverse;
+}
 .flex-wrap{
       flex-wrap: wrap;
 }
@@ -874,6 +886,9 @@ video {
 }
 .gap-9{
       gap: 2.25rem;
+}
+.overflow-auto{
+      overflow: auto;
 }
 .overflow-y-auto{
       overflow-y: auto;
@@ -962,6 +977,9 @@ video {
       --tw-bg-opacity: 1;
       background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-opacity-50{
+      --tw-bg-opacity: 0.5;
+}
 .bg-gradient-to-t{
       background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1024,17 +1042,25 @@ video {
       padding-top: 4rem;
       padding-bottom: 4rem;
 }
+.py-32{
+      padding-top: 8rem;
+      padding-bottom: 8rem;
+}
+.py-4{
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+}
 .py-6{
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
 }
-.py-64{
-      padding-top: 16rem;
-      padding-bottom: 16rem;
-}
 .py-7{
       padding-top: 1.75rem;
       padding-bottom: 1.75rem;
+}
+.py-8{
+      padding-top: 2rem;
+      padding-bottom: 2rem;
 }
 .pb-11{
       padding-bottom: 2.75rem;
@@ -1054,14 +1080,14 @@ video {
 .ps-11{
       padding-inline-start: 2.75rem;
 }
+.pt-20{
+      padding-top: 5rem;
+}
 .pt-24{
       padding-top: 6rem;
 }
 .pt-32{
       padding-top: 8rem;
-}
-.pt-40{
-      padding-top: 10rem;
 }
 .pt-8{
       padding-top: 2rem;
@@ -1167,6 +1193,9 @@ video {
 .ease-in-out{
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.home input, .home textarea {
+      text-transform: uppercase;
+    }
 .home .swiper-pagination-bullet {
       border-radius: 0;
       width: 96px;
@@ -1454,6 +1483,26 @@ video {
         -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
                 clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     }
+.single-work-footer {
+    grid-template-columns: 14% auto 14%;
+    
+}
+.work {
+    --swiper-pagination-color: white;
+    --swiper-pagination-bullet-inactive-color: black;
+    --swiper-pagination-top: 24px;
+}
+.work .swiper-pagination-bullet {
+      border-radius: 8px;
+    }
+.work .swiper-pagination {
+        display: flex;
+        height: 10px;
+        justify-content: space-evenly;
+    }
+.work .swiper-pagination .swiper-pagination-bullet {
+            height: 8px;
+        }
 :root {
   --ARMS---black: #201f1f;
   --ARMS---white: #ffffff;
@@ -1607,6 +1656,14 @@ header.light {
 }
 @media (min-width: 768px){
 
+      .md\:order-none{
+            order: 0;
+      }
+
+      .md\:mt-80{
+            margin-top: 20rem;
+      }
+
       .md\:block{
             display: block;
       }
@@ -1623,12 +1680,32 @@ header.light {
             display: none;
       }
 
+      .md\:h-1\/4{
+            height: 25%;
+      }
+
+      .md\:h-80{
+            height: 20rem;
+      }
+
       .md\:h-screen{
             height: 100vh;
       }
 
+      .md\:w-\[72\%\]{
+            width: 72%;
+      }
+
+      .md\:w-auto{
+            width: auto;
+      }
+
       .md\:grid-cols-2{
             grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+
+      .md\:grid-cols-3{
+            grid-template-columns: repeat(3, minmax(0, 1fr));
       }
 
       .md\:grid-cols-9{
@@ -1643,12 +1720,47 @@ header.light {
             grid-template-rows: repeat(3, minmax(0, 1fr));
       }
 
+      .md\:flex-row{
+            flex-direction: row;
+      }
+
+      .md\:items-start{
+            align-items: flex-start;
+      }
+
+      .md\:items-center{
+            align-items: center;
+      }
+
       .md\:overflow-y-hidden{
             overflow-y: hidden;
       }
 
+      .md\:bg-transparent{
+            background-color: transparent;
+      }
+
+      .md\:px-0{
+            padding-left: 0px;
+            padding-right: 0px;
+      }
+
+      .md\:py-0{
+            padding-top: 0px;
+            padding-bottom: 0px;
+      }
+
+      .md\:py-64{
+            padding-top: 16rem;
+            padding-bottom: 16rem;
+      }
+
       .md\:pr-12{
             padding-right: 3rem;
+      }
+
+      .md\:pt-40{
+            padding-top: 10rem;
       }
 }
 @media (min-width: 1280px){
