--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1608,6 +1608,13 @@ header.light {
       --tw-bg-opacity: 1;
       background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.swiper-container {
+  width: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  min-height: 0;
+  min-width: 0;
+}
 .hover\:bg-arms-black-700:hover{
       --tw-bg-opacity: 1;
       background-color: rgb(53 51 51 / var(--tw-bg-opacity));
