--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -100,3 +100,11 @@ header {
 ::-webkit-scrollbar-thumb {
   @apply bg-arms-white;
 }
+
+.swiper-container {
+  width: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  min-height: 0;
+  min-width: 0;
+}
