--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1608,7 +1608,7 @@ header.light {
       --tw-bg-opacity: 1;
       background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.swiper-container {
+.swiper-wrapper {
   width: 100%;
   max-width: 100%;
   max-height: 100vh;
