--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -101,7 +101,7 @@ header {
   @apply bg-arms-white;
 }
 
-.swiper-container {
+.swiper-wrapper {
   width: 100%;
   max-width: 100%;
   max-height: 100vh;
