--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -48,7 +48,12 @@
     }
   
     .swiper-slide {
-  
+      height: 100% !important;
+      width: 100%;
+      max-width: 100%;
+      max-height: -webkit-fill-available;
+      min-height: 0;
+      min-width: 0;
       &.light {
         h5,
         p {
