--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -104,7 +104,7 @@ header {
 .swiper-wrapper {
   width: 100%;
   max-width: 100%;
-  max-height: 100vh;
+  max-height: -webkit-fill-available;
   min-height: 0;
   min-width: 0;
 }
